2000-11-25  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* READMEs/INSTALL: Required version of APEL is more than 10.2.

	* doc/skk.texi: Ditto.

	* experimental/skk-e18.el: (exit-minibuffer@around@skk-e18-ad):
	New advice.
	(read-from-minibuffer@before@skk-e18-ad): Ditto.

	* skk-setup.el.in: Use `add-path' instead of `add-latest-path'.

	* skk-xemacs.el: (minibuffer-keyboard-quit@arond@skk-xemacs-ad):
	 From skk.el.

	* skk.el: Modify preface {Required version of APEL, etc}.
	(skk-henkan-show-candidate-subr): Use `string-with', not
	`string-bytes' {mm.el is broken}.
	(minibuffer-keyboard-quit@arond@skk-ad): Move to skk-xemacs.el.
	(exit-minibuffer@around@skk-ad): Don't advise Emacs 18.

2000-11-24  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* etc/NICOLA-SKK.tut: New file.

	* etc/SKK.tut: Typo.

	* install-info.el: Add comments.

	* skk-comp.el (skk-completion, skk-previous-completion): Don't
	signal error. Just show the message.

	* skk-tut.el (skktut-nicola-tut-file): New variable.
	(skk-tutorial): Use it for `skk-tut-file' when `skk-nicola' is
	used.
	(skktut-setup-working-buffer): Count how many questions the
	tutorial file contains.

	* skk-vars.el: Require "pcustom" also at the load time.

	* skk.el (skk-update-jisyo-original): Don't consider private
	dictionary sharing in tutorial.

2000-11-22  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* SKK-MK (SKK-MK-generate-autoloads-el-package): Eval the
	temporary buffer.
	(SKK-MK-detect-shadow-directory): Do not signal error.
	(SKK-MK-compile): Disable local eval.

	* install-info.el (install-info-add-groups): Detect the next
	section more correctly.

	* leim-list.el.in: Do nothing when `site-run-file' is nil.

2000-11-22  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* skk-jisx0201.el: Put in a comment at the bottom to eval the form
	which makes Emacs not to translate characters.
	
	* ChangeLog.daredevil: Put in a comment at the top to specify
	change-log major mode.
	
	* READMEs/AUTHORS: Updated.